# SDLGameJam2022

./: .gitignore  CMakeLists.txt
res/: atom-8.pal  cc-29.pal
res/level/: level10.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  level_template.txt  test_level.txt
src/: GameLoop.cpp  GameLoop.h  main.cpp
src/Collision/: CollisionDetector.cpp  CollisionDetector.h  Edge.cpp  Edge.h
src/Entities/: Entity.cpp  Entity.h  Goal.cpp  Goal.h  Projectile.cpp  Projectile.h
src/FileIO/: LevelLoader.cpp  LevelLoader.h
src/GUI/: Button.h  Clickable.cpp  Clickable.h  NextLevelButton.cpp  NextLevelButton.h  ObjectClickable.cpp  ObjectClickable.h  ResetButton.cpp  ResetButton.h  Shop.cpp  Shop.h  ShopButton.cpp
src/Input/: Keyboard.h  Mouse.cpp  Mouse.h
src/Level/: Grid.cpp  Grid.h  Object.cpp  Object.h  TileType.h  Tilemap.cpp  Tilemap.h
src/Level/Objects/: Diamond.cpp  Diamond.h  LongRightTriangle.cpp  LongRightTriangle.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h
src/Render/: Spritesheet.cpp  Spritesheet.h
src/Shop/: Button.cpp  ObjectClickable.cpp  ObjectClickable.h  Shop.cpp  Shop.h  ShopButton.cpp  ShopButton.h
src/States/: GameState.cpp  GameState.h  State.cpp  State.h
